force-app/main/default/objects/Invoice__c/fields/Aging_Category__c.field-meta.xml
<CustomField>
    <fullName>Aging_Category__c</fullName>
    <formula>IF( Aging__c &lt; 1, &quot;Not due yet&quot;,
IF( Aging__c &lt; 31, &quot;0-30 Days&quot;,
IF( Aging__c &lt; 61, &quot;61-90 days&quot;,
&quot;&gt;90 days&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Aging Category</label>
    <type>Text</type>
</CustomField>