force-app/main/default/objects/Invoice__c/fields/Allow_Online_CC_Payment__c.field-meta.xml
<CustomField>
    <fullName>Allow_Online_CC_Payment__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Allow Online CC Payment</label>
    <type>Checkbox</type>
</CustomField>