force-app/main/default/objects/Invoice__c/fields/BCC_Emails__c.field-meta.xml
<CustomField>
    <fullName>BCC_Emails__c</fullName>
    <label>BCC Emails</label>
    <length>255</length>
    <type>Text</type>
</CustomField>