force-app/main/default/objects/Invoice__c/fields/Bill_Country__c.field-meta.xml
<CustomField>
    <fullName>Bill_Country__c</fullName>
    <label>Bill Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>