force-app/main/default/objects/Invoice__c/fields/Bill_State__c.field-meta.xml
<CustomField>
    <fullName>Bill_State__c</fullName>
    <label>Bill State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>