force-app/main/default/objects/Invoice__c/fields/Bill_Street__c.field-meta.xml
<CustomField>
    <fullName>Bill_Street__c</fullName>
    <label>Bill Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>