force-app/main/default/objects/Invoice__c/fields/Bill_Suite__c.field-meta.xml
<CustomField>
    <fullName>Bill_Suite__c</fullName>
    <label>Bill Suite</label>
    <length>255</length>
    <type>Text</type>
</CustomField>