force-app/main/default/objects/Invoice__c/fields/CC_Emails__c.field-meta.xml
<CustomField>
    <fullName>CC_Emails__c</fullName>
    <label>CC Emails</label>
    <length>255</length>
    <type>Text</type>
</CustomField>