force-app/main/default/objects/Invoice__c/fields/Emails__c.field-meta.xml
<CustomField>
    <fullName>Emails__c</fullName>
    <label>Emails</label>
    <length>255</length>
    <type>Text</type>
</CustomField>