force-app/main/default/objects/Invoice__c/fields/Has_Credit__c.field-meta.xml
<CustomField>
    <fullName>Has_Credit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Credit</label>
    <type>Checkbox</type>
</CustomField>