force-app/main/default/objects/Invoice__c/fields/Message_On_Statement__c.field-meta.xml
<CustomField>
    <fullName>Message_On_Statement__c</fullName>
    <label>Message On Statement</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>