force-app/main/default/objects/Invoice__c/fields/Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>Payment_Status__c</fullName>
    <formula>IF(  ISBLANK(QB_Id__c)  , &quot;Not Synced With QB&quot;,  IF( AND( Balance_Due__c  = 0, Total__c = 0, NOT( Has_Payment__c )) , &apos;Voided&apos;, IF(Balance_Due__c = 0, &quot;Paid&quot;, IF(Balance_Due__c = Total__c, &quot;Not Paid&quot;, &quot;Partially Paid&quot; ))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Status</label>
    <type>Text</type>
</CustomField>