force-app/main/default/objects/Invoice__c/fields/QB_Custom_Field_3__c.field-meta.xml
<CustomField>
    <fullName>QB_Custom_Field_3__c</fullName>
    <label>QB Custom Field 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>