force-app/main/default/objects/Invoice__c/fields/QB_Line_Count__c.field-meta.xml
<CustomField>
    <fullName>QB_Line_Count__c</fullName>
    <label>QB Line Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>