force-app/main/default/objects/Invoice__c/fields/QB_Synctoken__c.field-meta.xml
<CustomField>
    <fullName>QB_Synctoken__c</fullName>
    <label>QB Synctoken</label>
    <length>255</length>
    <type>Text</type>
</CustomField>