force-app/main/default/objects/Invoice__c/fields/Ship_City__c.field-meta.xml
<CustomField>
    <fullName>Ship_City__c</fullName>
    <label>Ship City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>