force-app/main/default/objects/Invoice__c/fields/Ship_Country__c.field-meta.xml
<CustomField>
    <fullName>Ship_Country__c</fullName>
    <label>Ship Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>