force-app/main/default/objects/Invoice__c/fields/Ship_Street__c.field-meta.xml
<CustomField>
    <fullName>Ship_Street__c</fullName>
    <label>Ship Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>