force-app/main/default/objects/Invoice__c/fields/Ship_Suite__c.field-meta.xml
<CustomField>
    <fullName>Ship_Suite__c</fullName>
    <label>Ship Suite</label>
    <length>255</length>
    <type>Text</type>
</CustomField>