force-app/main/default/objects/Invoice__c/fields/Shipping_Handling__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Handling__c</fullName>
    <label>Shipping &amp; Handling</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>